# snapbot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mypy.ini  poe_tasks.toml  pyproject.toml  pytest.ini  ruff.toml  semantic.toml
.github/workflows/: release.yaml  test.yaml
plugins/root_plugin/: manifest.toml  plugin.py
plugins/snapbot_plugin/: manifest.toml  plugin.py
src/snapbot/common/: logging.py
src/snapbot/common/configs/: agent.py  base.py  logger.py  prompt.py  toolkit.py
src/snapbot/common/utils/: decorator.py  file.py  packages.py
src/snapbot/core/agent/: executor.py  models.py  registry.py  service.py
src/snapbot/core/agent/registry/: agent.py  subagent.py
src/snapbot/core/middleware/: memory.py  service.py
src/snapbot/core/prompts/: models.py  registry.py
src/snapbot/core/prompts/desc/: memory_manager.md  search-agent.md
src/snapbot/core/prompts/other/: memory.md
src/snapbot/core/prompts/system/: memory_manager.md  search-agent.md  snap-agent.md  snap_agent.md
src/snapbot/core/toolkits/: __init__.py  tavily.py
src/snapbot/core/tools/: models.py  registry.py
src/snapbot/core/tools/builtin/: read_identity_memory.py  read_preference_memory.py  tavily_extract.py  tavily_search.py  temp.py  update_identity_memory.py  update_preference_memory.py
tests/: test_consts.py
